--- a/1-exercise-solutions/lesson-05/5n.html
+++ b/1-exercise-solutions/lesson-05/5n.html
@@ -8,7 +8,7 @@
     <button>+</button>
     <button>=</button>
     <script>
-      let calculation = '';
+      let calculation = 0;
     </script>
   </body>
 </html>
