Update 7f.html else for catching error added

--- a/1-exercise-solutions/lesson-07/7f.html
+++ b/1-exercise-solutions/lesson-07/7f.html
@@ -18,7 +18,8 @@
         } else if (unit === 'F') {
           const result = convertToCelsius(degrees);
           return `${result}C`;
-        }
+        }else{
+          return "C or F are the one accepted run the function again!!!"
       }
 
       console.log(convertTemperature(25, 'C'));
