--- a/1-exercise-solutions/lesson-05/5h.html
+++ b/1-exercise-solutions/lesson-05/5h.html
@@ -9,7 +9,7 @@
     ">Show Quantity</button>
 
     <button onclick="
-      cartQuantity++;
+      ++cartQuantity;
       console.log(`Cart quantity: ${cartQuantity}`);
     ">Add to Cart</button>
 
@@ -19,7 +19,7 @@
     ">+2</button>
 
     <button onclick="
-      cartQuantity = cartQuantity + 3;
+      cartQuantity += 3;
       console.log(`Cart quantity: ${cartQuantity}`);
     ">+3</button>
 
