Update exercise solutions

--- a/1-exercise-solutions/lesson-05/5q.html
+++ b/1-exercise-solutions/lesson-05/5q.html
@@ -6,7 +6,7 @@
       calculation += '1';
       console.log(calculation);
     ">1</button>
-    
+
     <button onclick="
       calculation += '2';
       console.log(calculation);
@@ -23,10 +23,14 @@
     ">+</button>
 
     <button onclick="
+      // Note: eval() takes a string and runs it as code.
+      // Avoid using eval() in real world projects since
+      // it can potentially be given harmful code to run.
+      // Only use eval() for learning purposes.
       calculation = eval(calculation);
       console.log(calculation);
     ">=</button>
-    
+
     <script>
       let calculation = '';
     </script>
