--- a/1-exercise-solutions/lesson-08/8h.html
+++ b/1-exercise-solutions/lesson-08/8h.html
@@ -67,6 +67,10 @@
       ">.</button>
 
       <button onclick="
+        // Note: eval() takes a string and runs it as code.
+        // Avoid using eval() in real world projects since
+        // it can potentially be given harmful code to run.
+        // Only use eval() for learning purposes.
         calculation = eval(calculation);
         console.log(calculation);
 
