--- a/1-exercise-solutions/lesson-11/11u.html
+++ b/1-exercise-solutions/lesson-11/11u.html
@@ -21,12 +21,12 @@
         let eggsRemoved = 0;
 
         for (let i = 0; i < reversedFoods.length; i++) {
-          if (foods[i] === 'egg' && eggsRemoved < 2) {
+          if (reversedFoods[i] === 'egg' && eggsRemoved < 2) {
             eggsRemoved++;
             continue;
           }
 
-          result.push(foods[i]);
+          result.push(reversedFoods[i]);
         }
 
         return result.reverse();
