--- a/2-copy-of-code/lesson-18/lesson18.html
+++ b/2-copy-of-code/lesson-18/lesson18.html
@@ -1,6 +1,7 @@
 <html>
   <body>
     <script>
+      /*
       const xhr = new XMLHttpRequest();
 
       xhr.addEventListener('load', () => {
@@ -9,6 +10,15 @@
 
       xhr.open('GET', 'https://supersimplebackend.dev/greeting');
       xhr.send();
+      */
+
+      fetch(
+        'https://supersimplebackend.dev/greeting'
+      ).then((response) => {
+        return response.text();
+      }).then((text) => {
+        console.log(text);
+      });
     </script>
   </body>
 </html>
