--- a/2-copy-of-code/lesson-18/lesson18.html
+++ b/2-copy-of-code/lesson-18/lesson18.html
@@ -31,6 +31,7 @@
       getGreeting();
       */
 
+      /*
       async function postGreeting() {
         const response = await fetch('https://supersimplebackend.dev/greeting', {
           method: 'POST',
@@ -46,6 +47,14 @@
         console.log(text);
       }
       postGreeting();
+      */
+
+      async function getAmazon() {
+        const response = await fetch('https://amazon.com');
+        const text = await response.text();
+        console.log(text);
+      }
+      getAmazon();
     </script>
   </body>
 </html>
