--- a/1-exercise-solutions/lesson-07/7h.html
+++ b/1-exercise-solutions/lesson-07/7h.html
@@ -29,13 +29,13 @@
         }
       }
 
-      console.log(convertLength(50, 'miles', 'km'))
-      console.log(convertLength(32, 'km, 'miles'))
-      console.log(convertLength(50, 'km', 'km'))
+      console.log(convertLength(50, 'miles', 'km'));
+      console.log(convertLength(32, 'km, 'miles'));
+      console.log(convertLength(50, 'km', 'km'));
 
-      console.log(convertLength(5, 'miles', 'km'))
-      console.log(convertLength(5, 'miles', 'ft'))
-      console.log(convertLength(5, 'km', 'ft'))
+      console.log(convertLength(5, 'miles', 'km'));
+      console.log(convertLength(5, 'miles', 'ft'));
+      console.log(convertLength(5, 'km', 'ft'));
     </script>
   </body>
 </html>
