--- a/1-exercise-solutions/lesson-07/7h.html
+++ b/1-exercise-solutions/lesson-07/7h.html
@@ -30,7 +30,7 @@
       }
 
       console.log(convertLength(50, 'miles', 'km'));
-      console.log(convertLength(32, 'km, 'miles'));
+      console.log(convertLength(32, 'km', 'miles'));
       console.log(convertLength(50, 'km', 'km'));
 
       console.log(convertLength(5, 'miles', 'km'));
