--- a/1-exercise-solutions/lesson-07/7g.html
+++ b/1-exercise-solutions/lesson-07/7g.html
@@ -16,9 +16,9 @@
         }
       }
 
-      console.log(convertLength(50, 'miles', 'km'))
-      console.log(convertLength(32, 'km', 'miles'))
-      console.log(convertLength(50, 'km', 'km'))
+      console.log(convertLength(50, 'miles', 'km'));
+      console.log(convertLength(32, 'km', 'miles'));
+      console.log(convertLength(50, 'km', 'km'));
     </script>
   </body>
 </html>
