--- a/1-exercise-solutions/lesson-07/7i.html
+++ b/1-exercise-solutions/lesson-07/7i.html
@@ -45,6 +45,8 @@
       console.log(convertLength(5, 'miles', 'km'));
       console.log(convertLength(5, 'miles', 'ft'));
       console.log(convertLength(5, 'km', 'ft'));
+
+      console.log(convertLength(5, 'lbs', 'lbs'));
     </script>
   </body>
 </html>
