--- a/2-copy-of-code/12-advanced-functions.html
+++ b/2-copy-of-code/12-advanced-functions.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Advanced Functions</title>
+    <title>Advanced dfd</title>
   </head>
   <body>
     <button onclick="" class="js-button">Click</button>
