--- a/1-exercise-solutions/lesson-08/8h.html
+++ b/1-exercise-solutions/lesson-08/8h.html
@@ -71,7 +71,7 @@
         // Avoid using eval() in real world projects since
         // it can potentially be given harmful code to run.
         // Only use eval() for learning purposes.
-        calculation = eval(calculation);
+        calculation = eval(calculation) || '';
         console.log(calculation);
 
         // Remember to save the calculation here.
