Update dayjs link

--- a/1-exercise-solutions/lesson-15/15e.html
+++ b/1-exercise-solutions/lesson-15/15e.html
@@ -3,7 +3,7 @@
   <head></head>
   <body>
     <script type="module">
-      import dayjs from 'https://unpkg.com/dayjs@1.11.10/esm/index.js';
+      import dayjs from 'https://unpkg.com/supersimpledev@8.5.0/dayjs/esm/index.js';
 
       function isWeekend(date) {
         const dayOfWeek = date.format('dddd');
