--- a/1-exercise-solutions/lesson-15/15f.html
+++ b/1-exercise-solutions/lesson-15/15f.html
@@ -3,7 +3,7 @@
   <head></head>
   <body>
     <script type="module">
-      import dayjs from 'https://unpkg.com/dayjs@1.11.10/esm/index.js';
+      import dayjs from 'https://unpkg.com/supersimpledev@8.5.0/dayjs/esm/index.js';
       import isWeekend from './15f.js'
 
       // Test this function using a few different dates.
