--- a/1-exercise-solutions/lesson-04/4j.html
+++ b/1-exercise-solutions/lesson-04/4j.html
@@ -5,7 +5,7 @@
       .add-to-cart-button {
         background-color: yellow;
       }
-    
+
       .buy-now-button {
         background-color: orange;
       }
@@ -22,7 +22,7 @@
     ">Add to cart</button>
 
     <button class="buy-now-button" onclick="
-      alert('Loading...');
+      console.log('Loading...');
       alert('Purchased');
     ">Buy now</button>
   </body>
