--- a/1-exercise-solutions/lesson-05/5r.html
+++ b/1-exercise-solutions/lesson-05/5r.html
@@ -97,7 +97,7 @@
     <p>
       <button onclick="
         calculation = '';
-        console.log(calculation);
+        console.log('Cleared.');
       ">Clear</button>
     </p>
 
